--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "test-widget-order",
-  "version": "0.1.0",
+  "name": "test-widget-order-component",
+  "version": "1.0.0",
   "private": false,
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-npm": "PUBLIC_URL=https://unpkg.com/test-widget-order-component@latest/build/ yarn build",
     "test": "node scripts/test.js",
     "test:generators": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/testing/generators/test-generators.ts",
     "start:prod": "yarn run build && serve -s build",
@@ -28,8 +29,8 @@
     "@types/fontfaceobserver": "0.0.6",
     "@types/jest": "25.1.4",
     "@types/node": "14.6.4",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "16.9.8",
+    "@types/react": "17.0.14",
+    "@types/react-dom": "17.0.9",
     "@types/react-test-renderer": "16.9.3",
     "@types/rimraf": "3.0.0",
     "@types/shelljs": "0.8.8",
@@ -91,10 +92,10 @@
     "postcss-safe-parser": "5.0.2",
     "prettier": "2.1.1",
     "prompts": "2.4.0",
-    "react": "16.13.1",
+    "react": "17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.2",
     "react-helmet-async": "1.0.6",
     "react-refresh": "^0.8.3",
     "react-test-renderer": "16.13.1",
