--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": false,
   "scripts": {
     "start": "node scripts/start.js",
+    "types": "tsc --pretty --noEmit",
+    "clean": "rimraf ./build",
     "build": "node scripts/build.js",
     "build-npm": "PUBLIC_URL=https://unpkg.com/@procraft/widget-order-component@latest/build/ yarn build",
     "test": "node scripts/test.js",
@@ -22,7 +24,7 @@
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@procraft/widget-order": "~2.17.0",
+    "@procraft/widget-order": "~2.21.1",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.2",
