--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/react-test-renderer": "16.9.3",
     "@types/rimraf": "3.0.0",
     "@types/shelljs": "0.8.8",
-    "@types/styled-components": "5.1.3",
+    "@types/styled-components": "^5.1.9",
     "@types/testing-library__jest-dom": "5.9.2",
     "@types/webpack": "4.41.22",
     "@types/webpack-env": "1.15.2",
@@ -81,7 +81,7 @@
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
-    "jest-styled-components": "7.0.3",
+    "jest-styled-components": "^7.0.4",
     "jest-watch-typeahead": "0.6.1",
     "lint-staged": "10.3.0",
     "mini-css-extract-plugin": "0.11.3",
@@ -114,7 +114,7 @@
     "serve": "11.3.2",
     "shelljs": "0.8.4",
     "style-loader": "1.3.0",
-    "styled-components": "5.1.0",
+    "styled-components": "^5.2.0",
     "stylelint": "13.7.0",
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
