--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -1,13 +1,13 @@
 name: Audit
 
 on:
-  push:
-     branches: [master]
+  # push:
+  #   branches: [master]
   #  pull_request:
   #    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
